# swarmrouter

./: .gitignore  CLAUDE.md  MANIFEST.md  QUICKSTART.md  README.md  ROADMAP.md  edgar_pump.py  intelligence_cooker.py  pio.py  pyproject.toml  requirements.txt  test_setup.py
configs/: train.yaml  train_blackwell_v3.yaml
data/: generator.py  make_dataset.py
data/factory/: entropy.py
data/judge/: assemble_phase1.py  assemble_phase2.py  assemble_swarmjudge.py  assemble_swarmjudge_27b.py  benchmark_qwen35.py  cook_agent_traces.py  cook_agent_traces_async.py  cook_cre_judge_pairs.py  cook_judge_eval_async.py  cook_trajectory_judge.py  eval_swarmjudge_9b.py  select_phase1.py  train_phase1_b0.py  train_swarmjudge.py  train_swarmjudge_14b.py  train_swarmjudge_27b.py  train_swarmjudge_27b.yaml  train_swarmjudge_9b.py  train_swarmjudge_9b_blackwell.py  train_swarmjudge_9b_phase2.py  validate_judge_pairs_397b.py
data/router_v3/: __init__.py  assemble.py  factory.py  inspect_seal.py  mine_harvest.py  mine_platinum.py  schema.py  train_router_4b0.py  vet_harvest.py
data/swarmcre_dataset/: __init__.py  builder.py  constants.py  deal_generator.py  enrich_pass.py  enrichment.py  eval_builder.py  make_swarmcre.py  quality_checks.py  schemas.py  tasks.py  templates.py  underwriting_engine.py
projects/: file_project.py
scripts/: cli_router.py  eval.py  export_gguf.py  merge_lora.py  router_fuzzer.py  serve_api.py  train.py  train_v3.py
swarmrouter/: __init__.py  routing_rules.py  schema.py
worker/: package.json  wrangler.toml
worker/src/: api_docs.js  db.js  index.js  (+6 more)
(+29 files in other folders)
