[project]
name = "swarmrouter"
version = "1.0.0"
description = "Edge-native CRE intelligence router — 19 composable AI skills, event machine, semantic memory"
requires-python = ">=3.11"
dependencies = [
    # API & CLI (lightweight — runs everywhere)
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "rich>=13.7.0",
    "httpx>=0.24.0",
]

[dependency-groups]
train = [
    # Core ML — GPU rigs only (swarmrails, whale)
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "datasets>=2.16.0",
    "accelerate>=0.25.0",
    "peft>=0.7.0",
    "bitsandbytes>=0.41.0",
    "trl>=0.7.0",
    "unsloth[colab-new]>=2026.2",
    "torchvision",
]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.9",
]

[tool.uv]
default-groups = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["swarmrouter"]
